# amplify

./: README.md  mixer.py  pyproject.toml
SeniorProjectWork/: pyproject.toml
SeniorProjectWork/src/amplify/: cli.py  sample_loader.py
SeniorProjectWork/src/amplify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
looping/: buffer.cpp  cli_parsing.cpp  interpolation.cpp  loader.cpp  main.cpp  port_audio.cpp  sample_voice.cpp  utility.cpp
src/amplify/: cli.py  config.py  pyproject.toml  render.py
